force-app/main/default/objects/OpportunityTeamMember/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration irrelevant
2. ZR
3. SF-120 Helper Field to fill field &quot;Member_Name__c&quot; which is to be used for Email Templates</description>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Team</relationshipName>
    <type>Lookup</type>
</CustomField>