force-app/main/default/objects/OpportunityTeamMember/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to display the Account Link in Email Templates.</description>
    <formula>(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)))&amp; &quot;lightning/r/Opportunity/&quot; &amp;  Opportunity_ID__c &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>