force-app/main/default/objects/OpportunityTeamMember/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to display the Opportunity Name in Email Templates. Set by Flow &quot;ZR_Opportunity_Team_Member_Before_Insert&quot;</description>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>